--- a/comunicados.html
+++ b/comunicados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <center><h1>Ig:Jared.otak7u7 Send me a messages for help you :)</h1></center>
+        <center><h1>Gmail:elmuchacod@gmail.com Send me a email for help you :)</h1></center>
         <head>
             <meta charset="UTF-8">
             <title>Comunication</title>
