--- a/Minor chords.html
+++ b/Minor chords.html
@@ -14,5 +14,5 @@
         <li><a href="file:///Users/jaredirobbins/Desktop/My%20First%20website/Minor%20chords.html">Minor chords</a></li>
         <li><a href="file:///Users/jaredirobbins/Desktop/My%20First%20website/Sus.html">Sustained Chords</a></li>
         <li><a href="file:///Users/jaredirobbins/Desktop/My%20First%20website/comunicados.html">Comunication with us</a></li>
-        <center><img src="file:///Users/jaredirobbins/Downloads/Portada%20de%20Facebook%20de%20cuidado%20personal%20para%20hombres%20con%20oferta%20negro%20y%20rojo%20(4).png"width="1200"></center>
+        <img src="file:///Users/jaredirobbins/Downloads/Portada%20de%20Facebook%20de%20cuidado%20personal%20para%20hombres%20con%20oferta%20negro%20y%20rojo%20(4).png"width="1440">
     </ul>   
